GDK W32: Fix bounding rect calculation on window creation

This is a backport of commit 260d521.

The bounding rect specifies the top left and bottom right corners - the
bottom right corner must account for the current window position.

https://bugzilla.gnome.org/show_bug.cgi?id=764996